--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.user</groupId>
-	<artifactId>user-service</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>user-service</name>
+	<artifactId>scb-coding-test</artifactId>
+	<version>0.1</version>
+	<name>scb-coding-test</name>
 	<description>User service with CRUD operations</description>
 	<properties>
 		<java.version>17</java.version>
